cluster/apps/resilio/resilio-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: resilio-sync
  namespace: resilio
  labels:
    app.kubernetes.io/instance: resilio-sync
    app.kubernetes.io/name: resilio-sync
spec:
  selector:
    app.kubernetes.io/instance: resilio-sync
    app.kubernetes.io/name: resilio-sync
  type: LoadBalancer
  loadBalancerIP: 192.168.0.12
  externalTrafficPolicy: Local
  ports:
  - name: web
    port: 8888
    protocol: TCP
    targetPort: 8888
  - name: sync
    port: 55555
    protocol: TCP
    targetPort: 55555
